--- a/src/css/app.css
+++ b/src/css/app.css
@@ -22,7 +22,6 @@ main {
     .grid-container {
         display: grid;
         grid-template-columns: auto minmax(0, 1fr);
-        grid-template-rows: auto auto;
     }
 
     main {
